# python-template

./: .pre-commit-config.yaml  Dockerfile  pyproject.toml
src/: helpers.py  main.py
