[tool.poetry]
name = "src"
version = "1.0.0"
description = "Python Project"
authors = ["Romário Hornburg <romario.hornburg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
pycodestyle = "^2.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"