[tool.poetry]
name = "src"
version = "1.0.0"
description = "Python Project"
authors = ["Romário Hornburg <romario.hornburg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
coloredlogs = "^15.0.1"
verboselogs = "^1.7"
pycodestyle = "^2.12.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
pycodestyle = "^2.12.0"
black = "^24.4.2"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
